--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.21.2
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.2
+	adafruit/DHT sensor library@^1.4.4
+	adafruit/Adafruit Unified Sensor@^1.1.9
